--- a/Rapport 4/references.bib
+++ b/Rapport 4/references.bib
@@ -46,7 +46,13 @@ efficiency of your hydraulic power system.},
     note = "[Online; accessed 30-April-2018]"
   }
 
-
+@misc{ question_paper,
+    author = "{Y. M. Wang}, {D. K. Dysthe}",
+    title = "Bevegelsesmotstand",
+    year = "2018",
+    url = "http://www.uio.no/studier/emner/matnat/fys/FYS2150/v18/kursmateriell/bevegelsesmotstand/bevegelsesmotstand.pdf",
+    note = "[Online; accessed 30-April-2018]"
+  }
 
 @misc{ wiki:grav,
     author = "{Wikipedia contributors}",
