--- a/Rapport 4/nichoka_report4.tex
+++ b/Rapport 4/nichoka_report4.tex
@@ -69,18 +69,21 @@
 \maketitle
 
 \begin{abstract}
-  A study on the flow of an assortment of spheres in a fluid and the use of image processing to determine the terminal velocity.
+  Studying the type of fluid flow of an assortment of spheres of varying mass and diameter in a fluid by the use of image processing. Then comparing the data looking for possible links between flow type and the physical parameters of the spheres.
 \end{abstract}
 
 %\tableofcontents
 
 \section{\label{sect:intro}Introduction}
-  This report contains the description and analysis of data collected in the lab 21.03.2018 concerning the flow of several spherical objects in a large range of different sizes and densities. The balls were immersed in fluid, dropped and filmed. Post-lab, the raw footage was then processed using a Python script in order to quantify the motion of the spheres. This 
+  This report contains a summary of the experiment performed in the lab 21.03.2018 concerning the flow of several spherical objects in a range of different sizes and densities and the subsequent analysis of the data afterwards. 
+
+  The balls were immersed in an oil, dropped and filmed. Post-lab, the raw footage was then processed using a Python script in order to quantify the motion of the spheres and determine the type of flow undertaken by spheres based on their terminal velocity. 
+
+  There was found to be a possible correlation between the the type of flow, and the size of balls with the same density. But no such correlation was found for balls of similar size, but different densities.
 
 \section{\label{sect:theory}Theory}
 
   \subsection{Fluid dynamics}
-
     \subsubsection{Forces}
     For a body falling vertically under gravity, there are primarily three forces acting. Gravity, Upthrust and Drag. Gravity is expressed quite simply by $F_g = mg$, where $m$ denotes the mass of the body and $g$ the acceleration due to gravity, which is for the purposes of this report is taken to be equal to $9.80665$ms$^{-2}$ \cite{wiki:grav}. 
 
@@ -100,7 +103,24 @@
     \end{equation}
     Enabling us to study the drag force by making measurements of the comparatively simple forces, gravity and upthrust while the system is in a state of equilibrium.
 
-    \subsection{Types of flow}
+    \subsubsection{\label{sec:fluflo}Types of flow}
+    \begin{equation}
+      R_e = \frac{\rho v r}{\mu}
+      \label{eqn:rey}
+    \end{equation}
+    The Reynolds number, $R_e$ given by Eqn. \ref{eqn:rey} is a dimensionless variable used to quantify different types of flow, where $v$ denotes the velocity of the body flowing in the liquid, $r$ its radius, $\rho$ the density of the liquid and $\mu$ its viscosity. A lower Reynolds number indicated laminar flow, whilst a higher indicates turbulent flow.
+
+    Further, two additional dimensionless variables, $C_R$ and $C_S$ can be found \cite{question_paper} through dimensional analysis, given in Eqn \ref{eqn:dimvar}
+    \begin{align}
+      \begin{split}
+        C_R &= \frac{F_d}{\rho v^2 r^2} \\
+        C_S &= \frac{F_d}{\mu v r}
+      \end{split}
+      \label{eqn:dimvar}
+    \end{align}
+    where $C_R$ correlates to $F_d$ which is independent of the viscosity of the fluid, equivalent with a high Reynolds number and meaning that the flow is more turbulent than it is laminar and is referred to as Rayleigh flow. The opposite is given by $C_S$, which correlates to $F_d$ which is dependent on the viscosity of the fluid, equivalent with a low Reynolds number. This implies that the flow is more laminar than it is turbulent, and is referred to as Stokes' flow.
+
+    And lastly, for Stokes' flow $F_d/r \propto v$ and for Rayleigh flow $F_d / r^2 \propto v^2$. \cite{question_paper}
     
 
 
@@ -127,9 +147,14 @@
 
       In order to achieve this, two methods in particular are easy to implement. 1) If the object moves in an "open" area, cropping the image may suffice as a way to filter out anything undesirable. This is the most efficient method as far as computation time is concerned. It does however limit the possibility of completely automating the analysis of a large quantity of videos. 2) If the background is entirely static, or almost. The background can be filtered out by multiplying each frame of the video by an inverted image of the background divided by 256. Such an inverted image will have value 0 where the static objects are located, and 1 everywhere else.
 
+      An example an image processed using the technique described in this section in shown in Fig. \ref{fig:vid_frame}
 
-
-
+      \begin{figure}[H]
+        \center
+        \includegraphics[scale=0.75]{scripts/figs/graphs/B1_1.png}
+        \caption{Unprocessed and processed frame from one of the recordings.}
+        \label{fig:vid_frame}
+      \end{figure}
 
 
 \section{\label{section:experimental}Experimental Procedure} 
@@ -143,7 +168,7 @@
       \label{fig:FpsSignal}
     \end{figure}
   
-    In order to capture the motion of the balls, a USB video camera was connected to a computer running uEye cockpit\cite{_ueye_????}, a program which allowed us to change the settings of the camera, as well as record video files. The image was set to grayscale and the contrast, exposure, gain etc was changed such that the color histogram in uEye would show two significant, separated peaks such that it would be easy to process the image using the method described in section \ref{sect:imgpro}.
+    In order to capture the motion of the balls, a USB video camera was connected to a computer running uEye cockpit\cite{_ueye_????}, a program which allowed us to change the settings of the camera, as well as record video files. The image was set to gray-scale and the contrast, exposure, gain etc was changed such that the color histogram in uEye would show two significant, separated peaks such that it would be easy to process the image using the method described in section \ref{sect:imgpro}.
 
     Next, the error of the set FPS of the camera had to be determined. This was done by connecting a series of LEDs in a circle (see Fig. \ref{fig:FpsSignal}) to a signal generator. The light emitted would "circle" at a rate which could be changed using the signal generator. By adjusting the rate such that the emitted light would seem stationary when observed through the video feed in uEye, the true FPS of the camera could be determined. In our test, we set the camera to film at 60 FPS and the rate was adjusted untill the period of the LED was synced up with the camera at $3.60047$ KHz, the equivalent of $60.00783$ periods per second.
 
@@ -175,7 +200,7 @@
 
     The camera was pointed towards the large-scale tube, and prepared as described in section \ref{subsect:vidcap} between each reading. It was important that the lighting in the room was fairly constant for the video capture, so curtains were put in front of the windows. The camera was kept at 100 FPS for every experiment. For some of the balls with relatively low terminal velocity, the FPS could have been lowered to save space without making any significant sacrifices to the accuracy, but as we did not have any predicted values for the terminal velocity of the individual balls, we opted to keep it at 100FPS for every single experiment.
 
-    Before each experiment, the temperature of the oil was measured using an IR-thermometer with a precision of $\pm2^\circ$C \cite{_fluke_????}. Which is used to determine the viscosity of the oil.
+    Before each experiment, the temperature of the oil was measured using an IR-thermometer with an accuracy of $\pm2^\circ$C \cite{_fluke_????}. Which is used to determine the viscosity of the oil.
 
     For each experiment, a ball was picked up by hand and brought to the top of the tube by ladder. The ball was gripped tightly before carefully submerging it in the oil. After having ensured the person operating the camera software was ready to record, the ball was dropped. It was critical that the ball was dropped in a certain way, otherwise it gained too much horizontal velocity, which at worst could cause it to hit the side of the tube halfway through\footnote{Which happened in our first attempt} the tube. In order to avoid this, it is important to separate the fingers gripping the ball at the same time when dropping it, instead of letting it slide out of the hand. Sliding it out, leads it to spin, which in turn may lead it to move horizontally.
 
@@ -184,7 +209,9 @@
 
 \section{\label{sect:results}Results}
 
+  The recorded data, and some of the derived results of the experiment is given in Table \ref{tab:results} and presented graphically in Figures \ref{fig:plots1}, \ref{fig:plots2}.
 
+  For ball "A1", the terminal velocity could not be determined as the ball was dropped poorly and hit the side of the tank. As for A6 and D2, the balls could not be distinguished from the background when performing the video analysis.
   \begin{table}[H]
     \center
     \caption{Results}
@@ -196,18 +223,18 @@
 
   \begin{figure}[H]
     \center
-    \subfloat[][$v_c$ against $F_g/r$]{\includegraphics[scale=0.75]{scripts/figs/v_fgr.png}\label{}}\\
-    \subfloat[][$v_c^2$ against $F_g/r^2$]{\includegraphics[scale=0.75]{scripts/figs/v2_fgr2.png}\label{}}
+    \subfloat[][$v_c$ against $F_g/r$]{\includegraphics[scale=0.75]{scripts/figs/v_fgr.png}\label{fig:lam}}\\
+    \subfloat[][$v_c^2$ against $F_g/r^2$]{\includegraphics[scale=0.75]{scripts/figs/v2_fgr2.png}\label{fig:turb}}
     \caption{Relationship between velocty, radius and , where the annotations denote which ball the point represents}
     \label{fig:plots1}
   \end{figure}
 
     \begin{figure}[H]
     \center
-    \subfloat[][$C_R$ against $R_e$]{\includegraphics[scale=0.75]{scripts/figs/CR_RE.png}\label{}}
+    \subfloat[][$C_R$ against $R_e$]{\includegraphics[scale=0.75]{scripts/figs/CR_RE.png}\label{fig:CR_RE}}
     \\
-    \subfloat[][$C_S$ against $R_e$]{\includegraphics[scale=0.75]{scripts/figs/CS_RE.png}\label{}}
-    \caption{Relationship between the dimensionless variables and Reynolds number, where the annotations denote which ball the point represents}
+    \subfloat[][$C_S$ against $R_e$]{\includegraphics[scale=0.75]{scripts/figs/CS_RE.png}\label{fig:CS_RE}}
+    \caption{Relationship between the dimensionless variables, $C_R$(\ref{fig:CR_RE}), $C_S$(\ref{fig:CS_RE}) and Reynolds number, where the annotations denote which ball the point represents. Note that. (Note: D1 omitted from fig \ref{fig:CR_RE} due to its relatively high value for $C_R$, see table \ref{tab:results})}
     \label{fig:plots2}
   \end{figure}
 
@@ -215,7 +242,33 @@
 
 
 \section{\label{sect:discuss}Discussion}
+  \subsection{Precision of the terminal velocity}
+
+    When looking at the velocity/time plots for the balls, one would expect a gradually rising plot that flattens off ($\pm$ some noise) as(/if) the ball reaches its terminal velocity. However, when analyzing the data, i found that for many of the balls, the ball would reach a maximum and the subsequently begin to decelerate. This goes against what is expected, and affects the precision of the determined terminal velocity. As it turns out, this unexpected result is likely due to local changes in temperature, and therefore viscosity in the oil. Due to this disparity, the terminal velocity will also change. One could argue that recording the velocity at the same point at which the temperature was recorded would be an elegant work around to this problem, however, no such record was taken, so this point can not be determined.
+
+    Due to this, I opted to use the largest "flat" area in the velocity time graph as my basis for finding the terminal velocity of the ball, as depicted for one of the balls in Fig. \ref{fig:D1speed}
+    \begin{figure}[H]
+      \center
+      \includegraphics[scale=0.7]{scripts/figs/D1_speed.png}
+      \caption{Velocity-time graph for D1, with a linear fit to determine if the acceleration is $\approx 0$}
+      \label{fig:D1speed}
+    \end{figure}
+
+    In addition to the problems with the image analysis, the video also lacks some precision. The balls travel in a tube filled with oil, therefore, the light emitted from the balls will be refracted as it travels to the lens. As such, the footage captured by the camera is not an entirely precise measurement of the motion of the ball. However, the effect of refraction is likely minor compared to what was discussed above. 
+    
+  \subsection{Analysis}
+    Due to a last minute discovery of a bug in my code, which analyzed the video files. All of my data had to be scrapped and re-analyzed using a different script\footnote{lesTolkVideo.m} during the last minute. Due to this, I did not have the time to calculate the errors for each result.
+
+    Due to the lack of error-bars in the Fig \ref{fig:plots1}, it is difficult to place a line, showing which results are proportional to each other and which agent, as the only clear out-lier is C7, which incidentally is an out-lier in both Fig. \ref{fig:lam} and \ref{fig:turb}, suggesting that it is anomalous result. As such, I struggle to separate which balls undertake Rayleigh flow and which undertake Stoke flow based on this plot.
+
+    Looking at Figures \ref{fig:plots2}, I see that laminar flow, a small $R_e$ implies a small $C_S$ and similarly, that a small $C_R$ implies a larger $R_e$, that the flow is more turbulent.
+    Further balls seems to be predominantly split into two clusters, ignoring C7, for the reasons stated above. The most tightly knit cluster being the one at $0.5 < R_e < 0.6$. The balls in this cluster are A2, B1, C1, C3 and C4. In the case of A2 and B1 in particular, their common trait is that they are among the largest in their respective category, which are all made of the same material. Such a link is difficult to make in the case of C1 and C3, as that category contains mixed materials and are of similar sizes. I tried looking at the densities for this group, however, both C1 and C3 are of similar density to other balls in this group, so this does not separate them either.
+
+    As far as group A and B are concerned, looking at Fig. \ref{fig:plots2}, the common trend seems to be that the flow goes towards being more laminar as their size decreases.
+
 \section{\label{sect:conclusion}Conclusion}
+  To conclude, there seems to be a correlation between the size of a sphere, and its Reynolds number for objects of the same material. For spheres of different materials and similar size, there is no obvious link between the density of the material and the Reynold number.
+
 
 \bibliographystyle{plain}
 \bibliography{references.bib}
