--- a/Rapport 5/nichoka_fys2150_waveoptics_r5.tex
+++ b/Rapport 5/nichoka_fys2150_waveoptics_r5.tex
@@ -65,7 +65,7 @@
 % \email{nichoka@student.matnat.uio.no}
 
 \date{\today}% It is always \today, today,
-             %  but any date may be explicitly specified
+%  but any date may be explicitly specified
 
 \maketitle
 
@@ -77,30 +77,46 @@
 \section{\label{sect:intro}Introduction}
 
 \section{\label{sect:theory}Theory}
-\section{\label{section:experimental}Experimental Procedure} 
-  \subsection{Zeeman effect}
-\section{\label{sect:results}Results}
-  \subsection{\label{subsect:spectral}Spectral Lines}
-  \begin{table}[H]
-    \center
-    \caption{Hydrogen Lines}
-    \begin{tabular}{ l l l l}
-      \input{scripts/dat/hydrogenlines.dat}
-    \end{tabular}
-    \label{tab:hydrogen}
-  \end{table}
 
-  \subsection{\label{subsect:res_Zeeman}Zeeman Effect}
-  \begin{figure}[H]
-    \center
-    \subfloat[][$I = 1\,\textup{A}$]{\includegraphics[width=8cm]{scripts/figs/ZEEMAN1A.jpg}\label{fig:zeeman_1A}}
-    \subfloat[][$I = 2\,\textup{A}$]{\includegraphics[width=8cm]{scripts/figs/ZEEMAN2A.jpg}\label{fig:zeeman_2A}} \\
-    \subfloat[][$I = 3\,\textup{A}$]{\includegraphics[width=8cm]{scripts/figs/ZEEMAN3A.jpg}\label{fig:zeeman_3A}}
-    \subfloat[][$I = 4\,\textup{A}$]{\includegraphics[width=8cm]{scripts/figs/ZEEMAN4A.jpg}\label{fig:zeeman_4A}}
-    \caption{Split difraction lines due to $\sigma$-transitions for different magnitudes of magnetic field}
-    \label{fig:scale1}
-  \end{figure}
+\section{\label{section:experimental}Experimental Procedure} 
+   
+    \subsection{Zeeman effect}
+
+\section{\label{sect:results}Results}
+    \subsection{\label{subsect:spectral}Spectral Lines}
+    
+    \begin{table}[H]
+        \center
+        \caption{Hydrogen Lines}
+        \begin{tabular}{ l l l l}
+        \input{scripts/dat/hydrogenlines.dat}
+        \end{tabular}
+        \label{tab:hydrogen}
+    \end{table}
+
+    \begin{table}[H]
+        \center
+        \caption{Helium Lines}
+        \begin{tabular}{ l l l l}
+            \input{scripts/dat/heliumlines.dat}
+        \end{tabular}
+        \label{tab:helium}
+    \end{table}
+
+    \subsection{\label{subsect:res_Zeeman}Zeeman Effect}
+
+        \begin{figure}[H]
+            \center
+            \subfloat[][$I = 1\,\textup{A}$]{\includegraphics[width=8cm]{scripts/figs/ZEEMAN1A.jpg}\label{fig:zeeman_1A}}
+            \subfloat[][$I = 2\,\textup{A}$]{\includegraphics[width=8cm]{scripts/figs/ZEEMAN2A.jpg}\label{fig:zeeman_2A}} \\
+            \subfloat[][$I = 3\,\textup{A}$]{\includegraphics[width=8cm]{scripts/figs/ZEEMAN3A.jpg}\label{fig:zeeman_3A}}
+            \subfloat[][$I = 4\,\textup{A}$]{\includegraphics[width=8cm]{scripts/figs/ZEEMAN4A.jpg}\label{fig:zeeman_4A}}
+            \caption{Split difraction lines due to $\sigma$-transitions for different magnitudes of magnetic field}
+            \label{fig:scale1}
+        \end{figure}
+
 \section{\label{sect:discuss}Discussion}
+
 
 \section{\label{sect:conclusion}Conclusion}
 
