--- a/Rapport 5/nichoka_fys2150_waveoptics_r5.tex
+++ b/Rapport 5/nichoka_fys2150_waveoptics_r5.tex
@@ -82,12 +82,13 @@
 \section{\label{section:experimental}Experimental Procedure} 
     \subsection{Diffraction Grating}
 
-    
+    An aparature, sketched in \ref{fig:laser}
 
     \begin{figure}[H]
         \center
         \includegraphics[width=8cm]{scripts/figs/diff_diagram.png}
         \caption{Sketch of aparature used to measure diffraction lines of a laser}
+        \label{fig:laser}
     \end{figure}
 
     \subsection{Diffraction spectroscopy}
