--- a/Rapport 5/references.bib
+++ b/Rapport 5/references.bib
@@ -6,6 +6,10 @@
     file = {uEye Cockpit - IDS Imaging Development Systems GmbH:/home/nick/Zotero/storage/42QTT5PR/ueye-cockpit.html:text/html}
 }
 
+@online{zeeman_rev,
+    title = {http://www.uio.no/studier/emner/matnat/fys/FYS2150/v18/kursmateriell/bolgeoptikk/fys2150-3_2-zeeman_vedlegg.pdf}
+}
+
 @book{squires_practical_2001,
     edition = {4},
     title = {Practical Physics},
