--- a/Rapport 5/nichoka_fys2150_waveoptics_r5.tex
+++ b/Rapport 5/nichoka_fys2150_waveoptics_r5.tex
@@ -73,8 +73,8 @@
 %\tableofcontents
 
 \section{\label{sect:intro}Introduction}
-  This report contains a summary of a lab day in which me and my lab partner performed experiments in which we explored how measurements could be made using the behavior of waves, in particular, diffraction and interference.
-  To begin with, we start by looking at the behavior of Laser light diffracted through a wide array of different singular slits, parallel slits and circular slits. After which we measured some of the emission lines of Hydrogen and helium by the use of diffraction grating and lastly, by the use of an FP-interferometer used the diffracted emission lines of Cadmium subject to a magnetic field to find the Bohr magneton, $\mu_B$.
+  This report contains a summary of a lab day in which me and my lab partner performed experiments in which we explored how measurements could be made using the wave-like behavior of light, in particular, diffraction and interference.
+  To begin with, we start by looking at the behavior of Laser light diffracted through a wide array of different singular slits, parallel slits and circular slits. After which we measured some of the emission lines of Hydrogen and Helium by the use of diffraction grating and lastly, by the use of an FP-interferometer the split, and slightly shifted emission lines of Cadmium subject to a magnetic field we deduced the Bohr magneton, $\mu_B$, experimentally.
 
 \section{\label{sect:theory}Theory}
   \subsection{Diffraction \& Interference}
@@ -144,6 +144,8 @@
       Additionally, neither the laser source nor the optical track were fastened to the table and both were easily moved. We took care not to move them, but due to a very limited workspace this may have happened.
 
       As we swapped between different types slits, the patterns projected onto the screen was recorded by outlining their features on a piece of paper held up to the screen with a pen. Drawing the lines in the "correct" position was not easy to do in a precise manner, and is likely the source of a significant error in our final results across all of the different measurements. Afterwards, distance between the lines was measured using a ruler.
+
+      Also, every time either the mirror or the screen were moved, the distance $R_1$ and/or $R_2$ was measured using a Bosch laser distance measurer.
 
     \begin{figure}[H]
         \center
