--- a/Rapport 5/nichoka_fys2150_waveoptics_r5.tex
+++ b/Rapport 5/nichoka_fys2150_waveoptics_r5.tex
@@ -361,10 +361,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%
 %%% END OF MAIN BODY %%%
 %%%%%%%%%%%%%%%%%%%%%%%%
-
-\appendix*
+\newpage
+\appendix
 \section{Scripts\label{app:scripts}}
 \lstinputlisting[language=python]{scripts/zeemanread.py}
-\lstinputlisting[language=python]{scripts/balmerlines.py}
 
 \end{document}
