--- a/Rapport 5/references.bib
+++ b/Rapport 5/references.bib
@@ -11,7 +11,7 @@
 }
 
 @book{squires_practical_2001,
-    edition = {4},
+    edition = {4th},
     title = {Practical Physics},
     isbn = {978-0-521-77940-1},
     pagetotal = {212},
@@ -21,7 +21,7 @@
 }
 
 @book{griffiths,
-    edition = {2},
+    edition = {2nd},
     title = {Introduction to Quantum Mechanics},
     isbn = {978-1107179868},
     pagetotal = {468},
