--- a/Rapport 5/nichoka_fys2150_waveoptics_r5.tex
+++ b/Rapport 5/nichoka_fys2150_waveoptics_r5.tex
@@ -121,14 +121,14 @@
 
       For each chemical element and molecule, there is an associated set of discrete wavelengths  which its emitted light can have. These discrete wavelength are due to internal changes in energy levels, and can be predicted by looking at all the possible changes $\Delta E$ and calculating the wavelength of the photon with this energy by using the Energy-momentum relation \cite{wiki:energy_momentum} and de Broglies equation \cite{wiki:debroglie}.
 
-      Some of the visible lines of hydrogen are referred to as the Balmer series, and is calculated by \ref{eqn:balmer} and shown in Fig. \ref{fig:balmer_lines}.
+      Some of the visible lines of hydrogen are referred to as the Balmer series, and is calculated by Eqn. \ref{eqn:balmer} and shown in Fig. \ref{fig:balmer_lines}.
       \begin{equation}
          \lambda_n = \frac{1}{R \left[ \left(\frac{1}{2}\right)^2 - \left(\frac{1}{n}\right)^2 \right]} 
          \label{eqn:balmer}
       \end{equation}
 
     \subsection{The Zeeman Effect}
-      When a molecule is placed in a uniform magnetic field, $B$, the energy levels are shifted \cite{griffiths}. Resulting in slightly shifted emission lines of wavelengths $\lambda \pm \delta \lambda$. See fig. \ref{fig:zeeman_energy}. with tangential polarization relative to the emission lines for $B=0$.
+      When subject to a uniform magnetic field, $B$, the energy levels of a moluecule are shifted \cite{griffiths}. Resulting in additional, slightly shifted emission lines of wavelengths $\lambda \pm \delta \lambda$. See fig. \ref{fig:zeeman_energy}. with tangential polarization relative to the emission lines for $B=0$.
 
       \begin{figure}[H]
         \center 
