--- a/Rapport 5/references.bib
+++ b/Rapport 5/references.bib
@@ -107,3 +107,11 @@ efficiency of your hydraulic power system.},
     howpublished = "\url{http://www.uio.no/studier/emner/matnat/fys/FYS2150/v18/kursmateriell/bolgeoptikk/fys2150-3_2-zeeman_vedlegg.pdf}",
     note = "[Online; accessed 14-May-2018]"
   }
+
+  @misc{ wiki:rydenberg,
+    author = "{Wikipedia contributors}",
+    title = "Rydberg formula --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2018",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Rydberg_formula&oldid=836621952}",
+    note = "[Online; accessed 18-May-2018]"
+  }
