--- a/Rapport 5/nichoka_fys2150_waveoptics_r5.tex
+++ b/Rapport 5/nichoka_fys2150_waveoptics_r5.tex
@@ -56,7 +56,7 @@
 \begin{document}
 
 \title{Waveoptics\\
-\normalsize{FYS2150 Lab Report}}
+\normalsize{FYS2150 Lab Report}\\}
 
 \author{Nicholas Karlsen}
 % \email{nichoka@student.matnat.uio.no}
@@ -73,7 +73,7 @@
 %\tableofcontents
 
 \section{\label{sect:intro}Introduction}
-  This report contains a summary and analysis of a lab day in which me and my lab partner performed experiments in which we explored how measurements could be made using the wave-like behavior of light, in particular, diffraction and interference.
+  This report contains a summary and analysis of a lab day in which my lab and I partner performed experiments in which we explored how measurements could be made using the wave-like behavior of light, in particular, diffraction and interference.
   To begin with, we start by looking at the behavior of Laser light diffracted through a wide array of different singular slits, parallel slits and circular slits. After which we measured some of the emission lines of Hydrogen and Helium by the use of diffraction grating and lastly, by the use of an FP-interferometer the split, and slightly shifted emission lines of Cadmium subject to a magnetic field we deduced the Bohr magneton, $\mu_B$, experimentally.
 
 \section{\label{sect:theory}Theory}
@@ -188,7 +188,7 @@
       \begin{figure}[H]
         \center
         \includegraphics[width=15cm]{scripts/figs/ZEEMAN_EXPERIMENTAL.png}
-        \caption{Simplified FP-inferometer}
+        \caption{Simplified FP-interferometer}
         \label{FP-inferometer}
       \end{figure}
 
@@ -235,7 +235,7 @@
 
 
 
-      \begin{figure}[H]
+      \begin{figure}
         \center
         \includegraphics[scale=0.8]{scripts/zeeman_1a_intensity.png}
         \caption{Intensity distribution for cross section of diffraction lines observed for $I=1A$ (top) as well as the associated image (bottom)}
@@ -341,7 +341,7 @@
           4 & 685.5 & $423.5 \pm 1$ & $524.5 \pm 1$ & $661.0 \pm 1$ & $9.122\pm 0.138 \cdot 10^{-24}$ \\
           3 & 526.5 & $437.0 \pm 1$ & $515.0 \pm 1$ & $668.5 \pm 1$ & $9.186\pm 0.176\cdot 10^{-24}$ \\ 
           2 & 354.5 & $450.0 \pm 1$ & $503.0 \pm 1$ & $677.5 \pm 1$ & $9.402\pm 0.254\cdot 10^{-24}$ \\ 
-          1 & 176.0 & $463 \pm 1$ & $489 \pm 1$ & $686 \pm 1$ & $9.086\pm 0.498\cdot 10^{-27}$ \\  \hline
+          1 & 176.0 & $463 \pm 1$ & $489 \pm 1$ & $686 \pm 1$ & $9.086\pm 0.498\cdot 10^{-24}$ \\  \hline
             &       &   &     &     &     $\left< \tilde{\mu_B}\right>= 9.199\cdot 10^{-24}$
         \end{tabular}
         \label{tab:zeeman_table}
@@ -362,7 +362,7 @@
 
     Therefore, it is obvious that the intensity of the spectrum, and the environment\footnote{As in; the amount of light pollution present} in which the measurements are made pays a significant part in the accuracy of the measurements. Additionally, a significant portion of the "expected" lines did not show up at all, presumably due to a low intensity, which as seen in table \ref{tab:paraslit} can lead to "false" conclusions, where in the last row, observations pointed to 9 intensity peaks, but theory predicted 11. The two remaining peaks were simply too dim to be seen.
 
-  \subsection{Comparison of found $\mu_B$ and reference value}
+  \subsection{Comparison of measured $\mu_B$ and reference value}
     CODATA states that the value of the Bohr magneton, $\mu_B = 9.274 009 994(57)\times10^{-24}\,J\,T^{-1}$. The values found in table \ref{tab:zeeman_table} all overlap with this value within their uncertainties, and as such, it seems a fair assumption that the main contributor of uncertainty was the due to the limitations of image processing, since i could only determine the inner and outer diameter of the rings based on the discrete pixel values. Further, it seems as the current rises,the measured value of $\mu_B$ tends toward the CODATA value, based on these few measurements. the uncertainty also becomes smaller, which further strenghtens the assumption that the main contributor of uncertainty is that of $\sigma$.
 
 \section{\label{sect:conclusion}Conclusion}
