--- a/Rapport 6/fys2150r6_polarization_nichoka.tex
+++ b/Rapport 6/fys2150r6_polarization_nichoka.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,a4paper]{article}
+\documentclass[11pt,a4paper, twocolumn]{article}
 \usepackage{float}
 \usepackage{verbatim}
 \usepackage{subfig}
@@ -78,6 +78,18 @@
 \section{\label{section:experimental}Experimental Procedure} 
 
 \section{\label{sect:results}Results}
+  
+  \begin{figure}[H]
+    \center
+    \includegraphics[scale=0.8]{scripts/ppolar.png}
+    \caption{Intensity profile of p-polarised light}
+  \end{figure}
+
+  \begin{figure}[H]
+    \center
+    \includegraphics[scale=0.8]{scripts/spolar.png}
+    \caption{Intensity profile of p-polarised light}
+  \end{figure}
 
 \section{\label{sect:discuss}Discussion}
 
@@ -88,8 +100,4 @@
 %%%%%%%%%%%%%%%%%%%%%%%%
 %%% END OF MAIN BODY %%%
 %%%%%%%%%%%%%%%%%%%%%%%%
-\newpage
-\appendix
-\section{Scripts\label{app:scripts}}
-
 \end{document}
